Fixed overflow and settings button

--- a/src/App.css
+++ b/src/App.css
@@ -26,15 +26,15 @@ body, html {
   color: var(--light);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-   overflow: hidden;
 }
-
 .app-container {
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
-
 
 .delete-button {
    padding: 0.5rem 1rem;
@@ -72,6 +72,7 @@ body, html {
   width: 100%;
   max-width: 1000px;
   text-align: center;
+  padding-top: 25px;
   
 }
 
@@ -125,7 +126,7 @@ body, html {
   color: var(--gray);
   font-size: 0.9rem;
   text-align: center;
-  padding: 16px 0px 40px 0px;
+  padding-top: 50px;
 }
 
 
