--- a/src/components/CubeVisualization/CubeVisualization.css
+++ b/src/components/CubeVisualization/CubeVisualization.css
@@ -1,9 +1,8 @@
 /* Cube Visualization Styles */
 .cube-container {
   position: fixed;
-  bottom: 0;
-  right: 0;
-  padding: 0px 40px 60px 0px;
+  right: 50px;
+  bottom: 80px;
 }
 
 .cube-visualization {
